--- a/src/app/dinners/dinners.component.html
+++ b/src/app/dinners/dinners.component.html
@@ -1,1 +1,29 @@
-<p>dinners works!</p>
+<div class="container mt-3">
+  <h2>Dinner Schedule</h2>
+  <table class="table table-striped table-bordered">
+    <thead class="table-light">
+      <tr>
+        <th>Date</th>
+        <th>Food</th>
+        <th>Host</th>
+        <th>Guest</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let dinner of dinners">
+        <td>
+          {{ dinner.date }}
+        </td>
+        <td>
+          {{ dinner.food }}
+        </td>
+        <td>
+          {{ dinner.host }}
+        </td>
+        <td>
+          {{ dinner.guest }}
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
