--- a/src/app/shopping/shopping.component.html
+++ b/src/app/shopping/shopping.component.html
@@ -1,1 +1,12 @@
-<p>shopping works!</p>
+<div class="row">
+  <div class="col-xs-10">
+    <fdc-shopping-edit></fdc-shopping-edit>
+    <hr>
+    <ul class="list-group">
+      <a class="list-group-item" style="cursor: pointer;" *ngFor="let item of items; let i = index" (click)="onEditItems(i)">
+        {{ item.name }}
+        (
+        {{ item.amount }})</a>
+    </ul>
+  </div>
+</div>
