--- a/src/app/dinners/dinners.component.html
+++ b/src/app/dinners/dinners.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-3">
-  <h2>Dinner Schedule</h2>
+  <h2>Dinners</h2>
   <table class="table table-striped table-bordered">
     <thead class="table-light">
       <tr>
