--- a/src/app/shopping/shopping.component.html
+++ b/src/app/shopping/shopping.component.html
@@ -1,5 +1,6 @@
 <div class="row">
-  <div class="col-xs-10">
+  <h1>Shopping List</h1>
+  <div class="col-10">
     <fdc-shopping-edit></fdc-shopping-edit>
     <hr>
     <ul class="list-group">
