--- a/src/app/dinners/dinner-edit/dinner-edit.component.html
+++ b/src/app/dinners/dinner-edit/dinner-edit.component.html
@@ -12,11 +12,11 @@
         </div>
         <div class="col-md-3 form-group">
           <label for="host">Host</label>
-          <input type="text" id="host" class="form-control" name="host" ngModel required />
+          <input type="text" id="host" class="form-control" name="host" ngModel />
         </div>
         <div class="col-md-3 form-group">
           <label for="guest">Guest</label>
-          <input type="text" id="guest" class="form-control" name="guest" ngModel required />
+          <input type="text" id="guest" class="form-control" name="guest" ngModel />
         </div>
       </div>
       <div class="row mt-3">
